# sonic-swss

./: Cargo.toml  azure-pipelines.yml  configure.ac
.azure-pipelines/: build-template.yml  build_and_install_module.sh  test-docker-sonic-vs-template.yml
cfgmgr/: Makefile.am  buffer_check_headroom_mellanox.lua  buffer_headroom_mellanox.lua  buffer_pool_mellanox.lua  buffermgr-ringbuff.md  buffermgr.cpp  buffermgr.h  buffermgrd.cpp  buffermgrdyn.cpp  buffermgrdyn.h  macsecmgrd.cpp
crates/countersyncd/: Cargo.toml
crates/countersyncd/benches/: counter_db_actor_perf.rs  end_to_end.rs  ipfix_actor_perf.rs  ipfix_bench_data.rs  otel_actor_perf.rs
crates/countersyncd/src/: exit_codes.rs  lib.rs  main.rs
crates/countersyncd/src/actor/: control_netlink.rs  counter_db.rs  data_netlink.rs  ipfix.rs  mod.rs  netlink_utils.rs  otel.rs  stats_reporter.rs
crates/countersyncd/src/message/: mod.rs  netlink.rs  otel.rs
crates/countersyncd/src/utilities/: mod.rs
crates/countersyncd/tests/: ipfix_helpers_integration.rs  ipfix_test_helpers.rs
debian/: rules
fpmsyncd/: routesync.cpp  routesync.h
gearsyncd/: gearboxparser.cpp
lib/: gearboxutils.cpp  gearboxutils.h  recorder.cpp  recorder.h
mclagsyncd/: mclaglink.cpp  mclaglink.h
orchagent/: Makefile.am  aclorch.cpp  aclorch.h  bufferorch.cpp  bufferorch.h  bulker.h  copporch.cpp  eliminate_events.lua  fabricportsorch.cpp  fabricportsorch.h  fdborch.cpp  fdborch.h  flexcounterorch.cpp  flexcounterorch.h  intfsorch.cpp  intfsorch.h  macsecorch.cpp  macsecorch.h  macsecpost.cpp  macsecpost.h  main.cpp  mirrororch.cpp  mirrororch.h  muxorch.cpp  muxorch.h  neighorch.cpp  neighorch.h  notifications.cpp  notifications.h  notifier.h  orch.cpp  orch.h  orchdaemon.cpp  orchdaemon.h  pfc_detect_clounix.lua  pfc_detect_mellanox.lua  pfcactionhandler.cpp  pfcactionhandler.h  pfcwdorch.cpp  pfcwdorch.h  (+21 more)
orchagent/dash/: dashhaorch.cpp  dashhaorch.h  dashorch.cpp
orchagent/debug_counter/: debug_counter.cpp  debug_counter.h
orchagent/flex_counter/: flex_counter_manager.cpp  flex_counter_manager.h
orchagent/high_frequency_telemetry/: counternameupdater.cpp  hftelorch.cpp  hftelorch.h  hftelprofile.cpp
orchagent/p4orch/: acl_rule_manager.cpp  acl_rule_manager.h  acl_table_manager.cpp  acl_table_manager.h  acl_util.cpp  acl_util.h  gre_tunnel_manager.cpp  gre_tunnel_manager.h  l3_multicast_manager.cpp  l3_multicast_manager.h  neighbor_manager.cpp  neighbor_manager.h  next_hop_manager.cpp  next_hop_manager.h  p4orch.cpp  p4orch.h  p4orch_util.cpp  p4orch_util.h  route_manager.cpp
orchagent/p4orch/tests/: Makefile.am  acl_manager_test.cpp  fake_aclorch.cpp  fake_portorch.cpp  gre_tunnel_manager_test.cpp  l3_multicast_manager_test.cpp  mock_sai_ipmc.cpp  mock_sai_ipmc.h  mock_sai_ipmc_group.cpp  mock_sai_ipmc_group.h  mock_sai_neighbor.cpp  mock_sai_neighbor.h  mock_sai_next_hop.h  mock_sai_next_hop_group.h  mock_sai_rpf_group.cpp  mock_sai_rpf_group.h  mock_sai_tunnel.h  neighbor_manager_test.cpp  next_hop_manager_test.cpp  p4orch_test.cpp  route_manager_test.cpp  test_main.cpp
orchagent/port/: portcnt.h  porthlpr.cpp  porthlpr.h  portschema.h
tests/: buffer_model.py  conftest.py  create_appliance.py  gearbox.py  macsec.py  test_buffer.py  test_buffer_dynamic.py  test_buffer_manager.py  test_buffer_traditional.py  test_fabric_port_isolation.py  test_fips_macsec_post.py  test_hft.py  test_macsec_gearbox.py  test_nhg.py  test_port.py  test_port_add_remove.py  test_srv6.py  test_virtual_chassis.py  test_vnet.py  test_vnet2.py  test_vxlan_tunnel.py  vnet_lib.py
tests/mock_tests/: Makefile.am  aclorch_ut.cpp  buffermgrdyn_ut.cpp  bufferorch_ut.cpp  bulker_ut.cpp  flexcounter_ut.cpp  mirrororch_ut.cpp  mock_dbconnector.cpp  mock_orch_test.cpp  mock_orchagent_main.cpp  mock_orchagent_main.h  mock_saihelper.cpp  mock_table.cpp  mock_table.h  orchdaemon_ut.cpp  portsorch_ut.cpp  qosorch_ut.cpp  retrycache_ut.cpp  routeorch_ut.cpp  saispy.h  switchorch_ut.cpp  tunneldecaporch_ut.cpp
tests/mock_tests/fpmsyncd/: receive_srv6_mysids_ut.cpp  receive_srv6_steer_routes_ut.cpp  test_routesync.cpp  ut_helpers_fpmsyncd.cpp  ut_helpers_fpmsyncd.h
tests/p4rt/: acl.py  test_p4rt_acl.py
tests/single_asic_voq_fs/: default_config.json
tests/virtual_chassis/: database_config.json
